modules/vpc_with_nat_instance/vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block           = var.vpc_cidr
  enable_dns_support   = true // Default
  enable_dns_hostnames = true // Default false

  tags = merge(
    {
      "Name" = "Terraform VPC With NAT Instance"
    },
    var.default_tags
  )
}
